@@ -35,51 +35,74 @@ import static org.mockito.Mockito.when;
 class FlipReadServiceTest {
 
     @Test
-    void listFlipsWithoutTypeFilterUsesFindAll() {
+    void listFlipsWithoutTypeFilterUsesTwoPhaseIdLoad() {
         FlipRepository flipRepository = mock(FlipRepository.class);
         UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
         FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
         FlipReadService service = new FlipReadService(flipRepository, mapper, contextService);
         FlipCalculationContext context = FlipCalculationContext.standard(null);
 
-        Flip flip = mock(Flip.class);
-        UnifiedFlipDto dto = sampleDto();
+        Flip flipA = mock(Flip.class);
+        Flip flipB = mock(Flip.class);
+        UUID idA = UUID.fromString("90909090-9090-9090-9090-909090909090");
+        UUID idB = UUID.fromString("90909090-9090-9090-9090-909090909091");
+        UnifiedFlipDto dtoA = sampleDto();
+        UnifiedFlipDto dtoB = sampleDto();
         Pageable pageable = PageRequest.of(0, 20);
-        when(flipRepository.findAll(pageable)).thenReturn(new PageImpl<>(List.of(flip)));
+        when(flipA.getId()).thenReturn(idA);
+        when(flipB.getId()).thenReturn(idB);
+        when(flipRepository.findAllIds(pageable)).thenReturn(new PageImpl<>(List.of(idA, idB), pageable, 2));
+        when(flipRepository.findAllByIdInWithDetails(List.of(idA, idB))).thenReturn(List.of(flipB, flipA));
         when(contextService.loadCurrentContext()).thenReturn(context);
-        when(mapper.toDto(flip, context)).thenReturn(dto);
+        when(mapper.toDto(flipA, context)).thenReturn(dtoA);
+        when(mapper.toDto(flipB, context)).thenReturn(dtoB);
 
         Page<UnifiedFlipDto> result = service.listFlips(null, pageable);
 
-        assertEquals(1, result.getTotalElements());
-        assertEquals(dto, result.getContent().getFirst());
-        verify(flipRepository).findAll(pageable);
+        assertEquals(2, result.getTotalElements());
+        assertEquals(dtoA, result.getContent().get(0));
+        assertEquals(dtoB, result.getContent().get(1));
+        verify(flipRepository).findAllIds(pageable);
+        verify(flipRepository).findAllByIdInWithDetails(List.of(idA, idB));
         verify(contextService).loadCurrentContext();
-        verify(mapper).toDto(flip, context);
+        verify(mapper).toDto(flipA, context);
+        verify(mapper).toDto(flipB, context);
     }
 
     @Test
-    void listFlipsWithTypeFilterUsesTypeQuery() {
+    void listFlipsWithTypeFilterUsesTwoPhaseTypeQuery() {
         FlipRepository flipRepository = mock(FlipRepository.class);
         UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
         FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
         FlipReadService service = new FlipReadService(flipRepository, mapper, contextService);
         FlipCalculationContext context = FlipCalculationContext.standard(null);
 
-        Flip flip = mock(Flip.class);
-        UnifiedFlipDto dto = sampleDto();
-        Pageable pageable = PageRequest.of(1, 10);
-        when(flipRepository.findAllByFlipType(FlipType.BAZAAR, pageable)).thenReturn(new PageImpl<>(List.of(flip)));
+        Flip flipA = mock(Flip.class);
+        Flip flipB = mock(Flip.class);
+        UUID idA = UUID.fromString("91919191-9191-9191-9191-919191919191");
+        UUID idB = UUID.fromString("91919191-9191-9191-9191-919191919192");
+        UnifiedFlipDto dtoA = sampleDto();
+        UnifiedFlipDto dtoB = sampleDto();
+        Pageable pageable = PageRequest.of(0, 10);
+        when(flipA.getId()).thenReturn(idA);
+        when(flipB.getId()).thenReturn(idB);
+        when(flipRepository.findIdsByFlipType(FlipType.BAZAAR, pageable))
+                .thenReturn(new PageImpl<>(List.of(idA, idB), pageable, 2));
+        when(flipRepository.findAllByIdInWithDetails(List.of(idA, idB))).thenReturn(List.of(flipB, flipA));
         when(contextService.loadCurrentContext()).thenReturn(context);
-        when(mapper.toDto(flip, context)).thenReturn(dto);
+        when(mapper.toDto(flipA, context)).thenReturn(dtoA);
+        when(mapper.toDto(flipB, context)).thenReturn(dtoB);
 
         Page<UnifiedFlipDto> result = service.listFlips(FlipType.BAZAAR, pageable);
 
-        assertEquals(1, result.getTotalElements());
-        assertEquals(dto, result.getContent().getFirst());
-        verify(flipRepository).findAllByFlipType(FlipType.BAZAAR, pageable);
+        assertEquals(2, result.getTotalElements());
+        assertEquals(dtoA, result.getContent().get(0));
+        assertEquals(dtoB, result.getContent().get(1));
+        verify(flipRepository).findIdsByFlipType(FlipType.BAZAAR, pageable);
+        verify(flipRepository).findAllByIdInWithDetails(List.of(idA, idB));
         verify(contextService).loadCurrentContext();
-        verify(mapper).toDto(flip, context);
+        verify(mapper).toDto(flipA, context);
+        verify(mapper).toDto(flipB, context);
     }
 
     @Test
@@ -268,14 +291,24 @@ class FlipReadServiceTest {
         Flip flipA = mock(Flip.class);
         Flip flipB = mock(Flip.class);
         Flip flipC = mock(Flip.class);
+        UUID idA = UUID.fromString("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa");
+        UUID idB = UUID.fromString("bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb");
+        UUID idC = UUID.fromString("cccccccc-cccc-cccc-cccc-cccccccccccc");
+        when(flipA.getId()).thenReturn(idA);
+        when(flipB.getId()).thenReturn(idB);
+        when(flipC.getId()).thenReturn(idC);
 
-        when(flipRepository.findAllBySnapshotTimestampEpochMillis(snapshotTimestamp.toEpochMilli(), Pageable.unpaged()))
-                .thenReturn(new PageImpl<>(List.of(flipA, flipB, flipC)));
+        stubLegacyPagedBySnapshot(
+                flipRepository,
+                snapshotTimestamp.toEpochMilli(),
+                List.of(idA, idB, idC),
+                List.of(flipA, flipB, flipC)
+        );
         when(contextService.loadContextAsOf(snapshotTimestamp)).thenReturn(context);
 
-        when(mapper.toDto(flipA, context)).thenReturn(sampleScoredDto(UUID.fromString("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa"), 95.0D, 10.0D, 2_000_000L));
-        when(mapper.toDto(flipB, context)).thenReturn(sampleScoredDto(UUID.fromString("bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb"), 80.0D, 50.0D, 1_000_000L));
-        when(mapper.toDto(flipC, context)).thenReturn(sampleScoredDto(UUID.fromString("cccccccc-cccc-cccc-cccc-cccccccccccc"), 92.0D, 12.0D, 3_000_000L));
+        when(mapper.toDto(flipA, context)).thenReturn(sampleScoredDto(idA, 95.0D, 10.0D, 2_000_000L));
+        when(mapper.toDto(flipB, context)).thenReturn(sampleScoredDto(idB, 80.0D, 50.0D, 1_000_000L));
+        when(mapper.toDto(flipC, context)).thenReturn(sampleScoredDto(idC, 92.0D, 12.0D, 3_000_000L));
 
         Page<UnifiedFlipDto> result = service.filterFlips(
                 null,
@@ -307,11 +340,14 @@ class FlipReadServiceTest {
 
         Flip flipA = mock(Flip.class);
         Flip flipB = mock(Flip.class);
-        when(flipRepository.findAllByFlipType(FlipType.AUCTION, Pageable.unpaged()))
-                .thenReturn(new PageImpl<>(List.of(flipA, flipB)));
+        UUID idA = UUID.fromString("dddddddd-dddd-dddd-dddd-dddddddddddd");
+        UUID idB = UUID.fromString("eeeeeeee-eeee-eeee-eeee-eeeeeeeeeeee");
+        when(flipA.getId()).thenReturn(idA);
+        when(flipB.getId()).thenReturn(idB);
+        stubLegacyPagedByType(flipRepository, FlipType.AUCTION, List.of(idA, idB), List.of(flipA, flipB));
         when(contextService.loadCurrentContext()).thenReturn(context);
-        when(mapper.toDto(flipA, context)).thenReturn(sampleScoredDto(UUID.fromString("dddddddd-dddd-dddd-dddd-dddddddddddd"), 70.0D, 15.0D, 1_500_000L));
-        when(mapper.toDto(flipB, context)).thenReturn(sampleScoredDto(UUID.fromString("eeeeeeee-eeee-eeee-eeee-eeeeeeeeeeee"), 90.0D, 25.0D, 1_500_000L));
+        when(mapper.toDto(flipA, context)).thenReturn(sampleScoredDto(idA, 70.0D, 15.0D, 1_500_000L));
+        when(mapper.toDto(flipB, context)).thenReturn(sampleScoredDto(idB, 90.0D, 25.0D, 1_500_000L));
 
         Page<UnifiedFlipDto> result = service.topLiquidityFlips(FlipType.AUCTION, null, PageRequest.of(0, 10));
 
@@ -330,11 +366,14 @@ class FlipReadServiceTest {
 
         Flip flipA = mock(Flip.class);
         Flip flipB = mock(Flip.class);
-        when(flipRepository.findAllByFlipType(FlipType.BAZAAR, Pageable.unpaged()))
-                .thenReturn(new PageImpl<>(List.of(flipA, flipB)));
+        UUID idA = UUID.fromString("ffffffff-ffff-ffff-ffff-ffffffffffff");
+        UUID idB = UUID.fromString("99999999-9999-9999-9999-999999999999");
+        when(flipA.getId()).thenReturn(idA);
+        when(flipB.getId()).thenReturn(idB);
+        stubLegacyPagedByType(flipRepository, FlipType.BAZAAR, List.of(idA, idB), List.of(flipA, flipB));
         when(contextService.loadCurrentContext()).thenReturn(context);
-        when(mapper.toDto(flipA, context)).thenReturn(sampleScoredDto(UUID.fromString("ffffffff-ffff-ffff-ffff-ffffffffffff"), 60.0D, 8.0D, 1_500_000L));
-        when(mapper.toDto(flipB, context)).thenReturn(sampleScoredDto(UUID.fromString("99999999-9999-9999-9999-999999999999"), 95.0D, 4.0D, 1_500_000L));
+        when(mapper.toDto(flipA, context)).thenReturn(sampleScoredDto(idA, 60.0D, 8.0D, 1_500_000L));
+        when(mapper.toDto(flipB, context)).thenReturn(sampleScoredDto(idB, 95.0D, 4.0D, 1_500_000L));
 
         Page<UnifiedFlipDto> result = service.lowestRiskFlips(FlipType.BAZAAR, null, PageRequest.of(0, 10));
 
@@ -354,19 +393,25 @@ class FlipReadServiceTest {
         Flip flipHigh = mock(Flip.class);
         Flip flipMid = mock(Flip.class);
         Flip flipLowPenalty = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(flipHigh, flipMid, flipLowPenalty)));
+        UUID highId = UUID.fromString("10101010-1010-1010-1010-101010101010");
+        UUID midId = UUID.fromString("20202020-2020-2020-2020-202020202020");
+        UUID lowPenaltyId = UUID.fromString("30303030-3030-3030-3030-303030303030");
+        when(flipHigh.getId()).thenReturn(highId);
+        when(flipMid.getId()).thenReturn(midId);
+        when(flipLowPenalty.getId()).thenReturn(lowPenaltyId);
+        stubLegacyPagedAll(flipRepository, List.of(highId, midId, lowPenaltyId), List.of(flipHigh, flipMid, flipLowPenalty));
         when(contextService.loadCurrentContext()).thenReturn(context);
 
         when(mapper.toDto(flipHigh, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("10101010-1010-1010-1010-101010101010"),
+                highId,
                 5.0D, 10_000_000L, 95.0D, 5.0D, false
         ));
         when(mapper.toDto(flipMid, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("20202020-2020-2020-2020-202020202020"),
+                midId,
                 2.0D, 1_000_000L, 80.0D, 20.0D, false
         ));
         when(mapper.toDto(flipLowPenalty, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("30303030-3030-3030-3030-303030303030"),
+                lowPenaltyId,
                 2.0D, 1_000_000L, 80.0D, 20.0D, true
         ));
 
@@ -390,15 +435,19 @@ class FlipReadServiceTest {
 
         Flip inflatedMissingInput = mock(Flip.class);
         Flip actionable = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(inflatedMissingInput, actionable)));
+        UUID inflatedId = UUID.fromString("40404040-4040-4040-4040-404040404040");
+        UUID actionableId = UUID.fromString("50505050-5050-5050-5050-505050505050");
+        when(inflatedMissingInput.getId()).thenReturn(inflatedId);
+        when(actionable.getId()).thenReturn(actionableId);
+        stubLegacyPagedAll(flipRepository, List.of(inflatedId, actionableId), List.of(inflatedMissingInput, actionable));
         when(contextService.loadCurrentContext()).thenReturn(context);
 
         when(mapper.toDto(inflatedMissingInput, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("40404040-4040-4040-4040-404040404040"),
+                inflatedId,
                 5000.0D, 500_000_000L, 99.0D, 1.0D, true, List.of("MISSING_INPUT_PRICE:WILTED_BERBERIS")
         ));
         when(mapper.toDto(actionable, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("50505050-5050-5050-5050-505050505050"),
+                actionableId,
                 1.5D, 500_000L, 80.0D, 20.0D, false, List.of()
         ));
 
@@ -417,10 +466,12 @@ class FlipReadServiceTest {
         FlipCalculationContext context = FlipCalculationContext.standard(null);
 
         Flip electionOnlyPartialFlip = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(electionOnlyPartialFlip)));
+        UUID electionOnlyId = UUID.fromString("51515151-5151-5151-5151-515151515151");
+        when(electionOnlyPartialFlip.getId()).thenReturn(electionOnlyId);
+        stubLegacyPagedAll(flipRepository, List.of(electionOnlyId), List.of(electionOnlyPartialFlip));
         when(contextService.loadCurrentContext()).thenReturn(context);
         when(mapper.toDto(electionOnlyPartialFlip, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("51515151-5151-5151-5151-515151515151"),
+                electionOnlyId,
                 2.0D, 1_000_000L, 80.0D, 20.0D, true, List.of("MISSING_ELECTION_DATA")
         ));
 
@@ -439,10 +490,12 @@ class FlipReadServiceTest {
         FlipCalculationContext context = FlipCalculationContext.standard(null);
 
         Flip marketPartialFlip = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(marketPartialFlip)));
+        UUID marketPartialId = UUID.fromString("52525252-5252-5252-5252-525252525252");
+        when(marketPartialFlip.getId()).thenReturn(marketPartialId);
+        stubLegacyPagedAll(flipRepository, List.of(marketPartialId), List.of(marketPartialFlip));
         when(contextService.loadCurrentContext()).thenReturn(context);
         when(mapper.toDto(marketPartialFlip, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("52525252-5252-5252-5252-525252525252"),
+                marketPartialId,
                 2.0D, 1_000_000L, 80.0D, 20.0D, true, List.of("MISSING_ELECTION_DATA", "MISSING_OUTPUT_PRICE:ITEM")
         ));
 
@@ -461,16 +514,20 @@ class FlipReadServiceTest {
         FlipCalculationContext context = FlipCalculationContext.standard(null);
 
         List<Flip> flips = new ArrayList<>();
+        List<UUID> ids = new ArrayList<>();
         for (int i = 0; i < 12; i++) {
             flips.add(mock(Flip.class));
+            ids.add(UUID.fromString(String.format("%08d-0000-0000-0000-000000000000", i + 1)));
         }
-        when(flipRepository.findAllByFlipType(FlipType.BAZAAR, Pageable.unpaged()))
-                .thenReturn(new PageImpl<>(flips));
+        for (int i = 0; i < flips.size(); i++) {
+            when(flips.get(i).getId()).thenReturn(ids.get(i));
+        }
+        stubLegacyPagedByType(flipRepository, FlipType.BAZAAR, ids, flips);
         when(contextService.loadCurrentContext()).thenReturn(context);
         for (int i = 0; i < flips.size(); i++) {
             Flip flip = flips.get(i);
             long profit = i + 1L;
-            UUID id = UUID.fromString(String.format("%08d-0000-0000-0000-000000000000", i + 1));
+            UUID id = ids.get(i);
             when(mapper.toDto(flip, context)).thenReturn(sampleGoodnessDto(id, 1.0D, profit, 50.0D, 50.0D, false));
         }
 
@@ -483,6 +540,38 @@ class FlipReadServiceTest {
     }
 
     @Test
+    void topGoodnessFlipsCachesRankingPerResolvedSnapshot() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        FlipReadService service = new FlipReadService(flipRepository, mapper, contextService);
+        FlipCalculationContext context = FlipCalculationContext.standard(null);
+
+        Instant snapshotTimestamp = Instant.parse("2026-02-21T10:00:00Z");
+        long snapshotEpochMillis = snapshotTimestamp.toEpochMilli();
+        Flip flip = mock(Flip.class);
+        UUID flipId = UUID.fromString("61616161-6161-6161-6161-616161616161");
+        when(flip.getId()).thenReturn(flipId);
+
+        when(flipRepository.findMaxSnapshotTimestampEpochMillis()).thenReturn(Optional.of(snapshotEpochMillis));
+        stubLegacyPagedBySnapshot(flipRepository, snapshotEpochMillis, List.of(flipId), List.of(flip));
+        when(contextService.loadContextAsOf(snapshotTimestamp)).thenReturn(context);
+        when(mapper.toDto(flip, context)).thenReturn(sampleGoodnessDto(
+                flipId,
+                1.0D, 1_000_000L, 70.0D, 15.0D, false
+        ));
+
+        Page<FlipGoodnessDto> first = service.topGoodnessFlips(null, null, 0);
+        Page<FlipGoodnessDto> second = service.topGoodnessFlips(null, null, 0);
+
+        assertEquals(1, first.getTotalElements());
+        assertEquals(1, second.getTotalElements());
+        verify(flipRepository, times(1))
+                .findIdsBySnapshotTimestampEpochMillis(snapshotEpochMillis, PageRequest.of(0, 500));
+        verify(contextService, times(1)).loadContextAsOf(snapshotTimestamp);
+    }
+
+    @Test
     void topGoodnessFlipsPreservesOffsetWhenNormalizingPageSize() {
         FlipRepository flipRepository = mock(FlipRepository.class);
         UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
@@ -491,15 +580,20 @@ class FlipReadServiceTest {
         FlipCalculationContext context = FlipCalculationContext.standard(null);
 
         List<Flip> flips = new ArrayList<>();
+        List<UUID> ids = new ArrayList<>();
         for (int i = 0; i < 30; i++) {
             flips.add(mock(Flip.class));
+            ids.add(UUID.fromString(String.format("%08d-0000-0000-0000-000000000000", i + 1)));
         }
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(flips));
+        for (int i = 0; i < flips.size(); i++) {
+            when(flips.get(i).getId()).thenReturn(ids.get(i));
+        }
+        stubLegacyPagedAll(flipRepository, ids, flips);
         when(contextService.loadCurrentContext()).thenReturn(context);
         for (int i = 0; i < flips.size(); i++) {
             Flip flip = flips.get(i);
             long profit = i + 1L;
-            UUID id = UUID.fromString(String.format("%08d-0000-0000-0000-000000000000", i + 1));
+            UUID id = ids.get(i);
             when(mapper.toDto(flip, context)).thenReturn(sampleGoodnessDto(id, 1.0D, profit, 50.0D, 50.0D, false));
         }
 
@@ -515,6 +609,620 @@ class FlipReadServiceTest {
     }
 
     @Test
+    void topGoodnessFlipsWithHugeOffsetAndLimitKeepsTotalsAndBoundsPageSize() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        FlipReadService service = new FlipReadService(flipRepository, mapper, contextService);
+        FlipCalculationContext context = FlipCalculationContext.standard(null);
+
+        List<Flip> flips = new ArrayList<>();
+        List<UUID> ids = new ArrayList<>();
+        for (int i = 0; i < 30; i++) {
+            flips.add(mock(Flip.class));
+            ids.add(UUID.fromString(String.format("%08d-0000-0000-0000-000000000000", i + 1)));
+        }
+        for (int i = 0; i < flips.size(); i++) {
+            when(flips.get(i).getId()).thenReturn(ids.get(i));
+        }
+        stubLegacyPagedAll(flipRepository, ids, flips);
+        when(contextService.loadCurrentContext()).thenReturn(context);
+        for (int i = 0; i < flips.size(); i++) {
+            Flip flip = flips.get(i);
+            long profit = i + 1L;
+            UUID id = ids.get(i);
+            when(mapper.toDto(flip, context)).thenReturn(sampleGoodnessDto(id, 1.0D, profit, 50.0D, 50.0D, false));
+        }
+
+        Pageable requested = OffsetLimitPageRequest.of(50_000L, Integer.MAX_VALUE, Sort.by("id").ascending());
+        Page<FlipGoodnessDto> result = service.topGoodnessFlips(null, null, requested);
+
+        assertEquals(30, result.getTotalElements());
+        assertEquals(10, result.getSize());
+        assertEquals(50_000L, result.getPageable().getOffset());
+        assertTrue(result.getContent().isEmpty());
+    }
+
+    @Test
+    void topGoodnessFlipsCurrentStorageHydratesPagedEntries() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        UUID highId = UUID.fromString("83838383-8383-8383-8383-838383838383");
+        UUID lowId = UUID.fromString("84848484-8484-8484-8484-848484848484");
+        UnifiedFlipDto highScoreSkeleton = sampleGoodnessDto(highId, 4.0D, 4_000_000L, 80.0D, 10.0D, false);
+        UnifiedFlipDto lowScoreSkeleton = sampleGoodnessDto(lowId, 1.0D, 1_000_000L, 60.0D, 20.0D, false);
+        when(unifiedFlipCurrentReadService.latestSnapshotEpochMillis())
+                .thenReturn(Optional.of(Instant.parse("2026-02-25T15:00:00Z").toEpochMilli()));
+        when(unifiedFlipCurrentReadService.listCurrentScoringDtos(null))
+                .thenReturn(List.of(lowScoreSkeleton, highScoreSkeleton));
+
+        UnifiedFlipDto hydratedHigh = new UnifiedFlipDto(
+                highId,
+                FlipType.BAZAAR,
+                List.of(new UnifiedFlipDto.ItemStackDto("ENCHANTED_DIAMOND", 16)),
+                List.of(new UnifiedFlipDto.ItemStackDto("POWER_SCROLL", 1)),
+                highScoreSkeleton.requiredCapital(),
+                highScoreSkeleton.expectedProfit(),
+                highScoreSkeleton.roi(),
+                highScoreSkeleton.roiPerHour(),
+                highScoreSkeleton.durationSeconds(),
+                highScoreSkeleton.fees(),
+                highScoreSkeleton.liquidityScore(),
+                highScoreSkeleton.riskScore(),
+                highScoreSkeleton.snapshotTimestamp(),
+                highScoreSkeleton.partial(),
+                highScoreSkeleton.partialReasons(),
+                List.of(),
+                List.of()
+        );
+        UnifiedFlipDto hydratedLow = new UnifiedFlipDto(
+                lowId,
+                FlipType.BAZAAR,
+                List.of(new UnifiedFlipDto.ItemStackDto("WHEAT", 160)),
+                List.of(new UnifiedFlipDto.ItemStackDto("HAY_BLOCK", 1)),
+                lowScoreSkeleton.requiredCapital(),
+                lowScoreSkeleton.expectedProfit(),
+                lowScoreSkeleton.roi(),
+                lowScoreSkeleton.roiPerHour(),
+                lowScoreSkeleton.durationSeconds(),
+                lowScoreSkeleton.fees(),
+                lowScoreSkeleton.liquidityScore(),
+                lowScoreSkeleton.riskScore(),
+                lowScoreSkeleton.snapshotTimestamp(),
+                lowScoreSkeleton.partial(),
+                lowScoreSkeleton.partialReasons(),
+                List.of(),
+                List.of()
+        );
+        when(unifiedFlipCurrentReadService.listCurrentByStableFlipIds(List.of(highId, lowId)))
+                .thenReturn(List.of(hydratedHigh, hydratedLow));
+
+        Page<FlipGoodnessDto> result = service.topGoodnessFlips(null, null, 0);
+
+        assertEquals(2, result.getTotalElements());
+        assertEquals(highId, result.getContent().get(0).flip().id());
+        assertEquals("POWER_SCROLL", result.getContent().get(0).flip().outputItems().getFirst().itemId());
+        assertEquals(lowId, result.getContent().get(1).flip().id());
+        verify(unifiedFlipCurrentReadService).listCurrentScoringDtos(null);
+        verify(unifiedFlipCurrentReadService).listCurrentByStableFlipIds(List.of(highId, lowId));
+        verify(unifiedFlipCurrentReadService, never()).listCurrent(null);
+        verifyNoInteractions(flipRepository);
+    }
+
+    @Test
+    void topGoodnessFlipsCurrentStorageCachesRankingPerLatestSnapshot() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        long snapshotEpochMillis = Instant.parse("2026-02-25T15:00:00Z").toEpochMilli();
+        UUID onlyId = UUID.fromString("85858585-8585-8585-8585-858585858585");
+        UnifiedFlipDto scoring = sampleGoodnessDto(onlyId, 2.0D, 2_000_000L, 70.0D, 20.0D, false);
+        UnifiedFlipDto hydrated = new UnifiedFlipDto(
+                onlyId,
+                FlipType.BAZAAR,
+                List.of(new UnifiedFlipDto.ItemStackDto("INK_SACK", 64)),
+                List.of(new UnifiedFlipDto.ItemStackDto("ENCHANTED_INK_SACK", 1)),
+                scoring.requiredCapital(),
+                scoring.expectedProfit(),
+                scoring.roi(),
+                scoring.roiPerHour(),
+                scoring.durationSeconds(),
+                scoring.fees(),
+                scoring.liquidityScore(),
+                scoring.riskScore(),
+                scoring.snapshotTimestamp(),
+                scoring.partial(),
+                scoring.partialReasons(),
+                List.of(),
+                List.of()
+        );
+
+        when(unifiedFlipCurrentReadService.latestSnapshotEpochMillis()).thenReturn(Optional.of(snapshotEpochMillis));
+        when(unifiedFlipCurrentReadService.listCurrentScoringDtos(FlipType.BAZAAR)).thenReturn(List.of(scoring));
+        when(unifiedFlipCurrentReadService.listCurrentByStableFlipIds(List.of(onlyId))).thenReturn(List.of(hydrated));
+
+        Page<FlipGoodnessDto> first = service.topGoodnessFlips(FlipType.BAZAAR, null, 0);
+        Page<FlipGoodnessDto> second = service.topGoodnessFlips(FlipType.BAZAAR, null, 0);
+
+        assertEquals(1, first.getTotalElements());
+        assertEquals(1, second.getTotalElements());
+        verify(unifiedFlipCurrentReadService, times(1)).listCurrentScoringDtos(FlipType.BAZAAR);
+        verify(unifiedFlipCurrentReadService, times(2)).listCurrentByStableFlipIds(List.of(onlyId));
+    }
+
+    @Test
+    void topGoodnessFlipsSeparatesCurrentAndLegacyRankingCaches() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        long snapshotEpochMillis = Instant.parse("2026-02-25T15:00:00Z").toEpochMilli();
+        when(unifiedFlipCurrentReadService.latestSnapshotEpochMillis()).thenReturn(Optional.of(snapshotEpochMillis));
+
+        List<UnifiedFlipDto> currentScoring = new ArrayList<>();
+        Map<UUID, UnifiedFlipDto> currentHydratedById = new LinkedHashMap<>();
+        for (int i = 0; i < 12; i++) {
+            UUID id = UUID.fromString(String.format("%08d-aaaa-bbbb-cccc-dddddddddddd", i + 1));
+            UnifiedFlipDto scoring = sampleGoodnessDto(id, 1.0D + i, 1_000_000L + (i * 10_000L), 70.0D, 20.0D, false);
+            UnifiedFlipDto hydrated = new UnifiedFlipDto(
+                    id,
+                    FlipType.BAZAAR,
+                    List.of(new UnifiedFlipDto.ItemStackDto("ITEM_" + i, 64)),
+                    List.of(new UnifiedFlipDto.ItemStackDto("ITEM_OUT_" + i, 1)),
+                    scoring.requiredCapital(),
+                    scoring.expectedProfit(),
+                    scoring.roi(),
+                    scoring.roiPerHour(),
+                    scoring.durationSeconds(),
+                    scoring.fees(),
+                    scoring.liquidityScore(),
+                    scoring.riskScore(),
+                    scoring.snapshotTimestamp(),
+                    scoring.partial(),
+                    scoring.partialReasons(),
+                    List.of(),
+                    List.of()
+            );
+            currentScoring.add(scoring);
+            currentHydratedById.put(id, hydrated);
+        }
+        when(unifiedFlipCurrentReadService.listCurrentScoringDtos(null)).thenReturn(currentScoring);
+        when(unifiedFlipCurrentReadService.listCurrentByStableFlipIds(org.mockito.ArgumentMatchers.anyList()))
+                .thenAnswer(invocation -> {
+                    List<UUID> requested = invocation.getArgument(0);
+                    return requested.stream()
+                            .map(currentHydratedById::get)
+                            .filter(Objects::nonNull)
+                            .toList();
+                });
+
+        Page<FlipGoodnessDto> currentPage = service.topGoodnessFlips(null, null, 0);
+        assertEquals(12L, currentPage.getTotalElements());
+
+        Instant snapshot = Instant.ofEpochMilli(snapshotEpochMillis);
+        FlipCalculationContext context = FlipCalculationContext.standard(null);
+        Flip legacyFirst = mock(Flip.class);
+        Flip legacySecond = mock(Flip.class);
+        UUID legacyFirstId = UUID.fromString("abababab-abab-abab-abab-111111111111");
+        UUID legacySecondId = UUID.fromString("bcbcbcbc-bcbc-bcbc-bcbc-222222222222");
+        when(legacyFirst.getId()).thenReturn(legacyFirstId);
+        when(legacySecond.getId()).thenReturn(legacySecondId);
+        stubLegacyPagedBySnapshot(
+                flipRepository,
+                snapshotEpochMillis,
+                List.of(legacyFirstId, legacySecondId),
+                List.of(legacyFirst, legacySecond)
+        );
+        when(contextService.loadContextAsOf(snapshot)).thenReturn(context);
+        when(mapper.toDto(legacyFirst, context)).thenReturn(sampleGoodnessDto(
+                legacyFirstId, 1.0D, 100_000L, 60.0D, 25.0D, false
+        ));
+        when(mapper.toDto(legacySecond, context)).thenReturn(sampleGoodnessDto(
+                legacySecondId, 1.5D, 200_000L, 62.0D, 22.0D, false
+        ));
+
+        Page<FlipGoodnessDto> legacyPage = service.topGoodnessFlips(null, snapshot, 0);
+
+        assertEquals(2L, legacyPage.getTotalElements());
+        verify(flipRepository, times(1))
+                .findIdsBySnapshotTimestampEpochMillis(snapshotEpochMillis, PageRequest.of(0, 500));
+    }
+
+    @Test
+    void filterFlipsCurrentStorageHydratesPagedRowsOnly() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        UUID highId = UUID.fromString("88888888-8888-8888-8888-888888888888");
+        UnifiedFlipDto hydratedHigh = new UnifiedFlipDto(
+                highId,
+                FlipType.BAZAAR,
+                List.of(new UnifiedFlipDto.ItemStackDto("RAW_FISH", 16)),
+                List.of(new UnifiedFlipDto.ItemStackDto("ENCHANTED_RAW_FISH", 1)),
+                1_000_000L,
+                3_000_000L,
+                3.0D,
+                80.0D,
+                60L,
+                10_000L,
+                80.0D,
+                10.0D,
+                Instant.parse("2026-02-25T12:00:00Z"),
+                false,
+                List.of(),
+                List.of(),
+                List.of()
+        );
+        when(unifiedFlipCurrentReadService.listCurrentFilteredPage(
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.any(Pageable.class)
+        )).thenReturn(new PageImpl<>(List.of(hydratedHigh), PageRequest.of(0, 1), 2));
+
+        Page<UnifiedFlipDto> result = service.filterFlips(
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                FlipSortBy.EXPECTED_PROFIT,
+                Sort.Direction.DESC,
+                PageRequest.of(0, 1)
+        );
+
+        assertEquals(2, result.getTotalElements());
+        assertEquals(1, result.getContent().size());
+        assertEquals(highId, result.getContent().getFirst().id());
+        assertEquals("ENCHANTED_RAW_FISH", result.getContent().getFirst().outputItems().getFirst().itemId());
+        verify(unifiedFlipCurrentReadService).listCurrentFilteredPage(
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.any(Pageable.class)
+        );
+        verifyNoInteractions(flipRepository);
+    }
+
+    @Test
+    void topFlipsCurrentStorageHydratesLimitedRowsOnly() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        UUID firstId = UUID.fromString("8a8a8a8a-8a8a-8a8a-8a8a-8a8a8a8a8a8a");
+        UnifiedFlipDto hydratedFirst = new UnifiedFlipDto(
+                firstId,
+                FlipType.BAZAAR,
+                List.of(new UnifiedFlipDto.ItemStackDto("GOLD_INGOT", 64)),
+                List.of(new UnifiedFlipDto.ItemStackDto("ENCHANTED_GOLD", 1)),
+                1_000_000L,
+                3_000_000L,
+                3.0D,
+                80.0D,
+                60L,
+                10_000L,
+                80.0D,
+                10.0D,
+                Instant.parse("2026-02-25T12:00:00Z"),
+                false,
+                List.of(),
+                List.of(),
+                List.of()
+        );
+        when(unifiedFlipCurrentReadService.listCurrentFilteredPage(
+                org.mockito.ArgumentMatchers.eq(FlipType.BAZAAR),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.any(Pageable.class)
+        )).thenReturn(new PageImpl<>(List.of(hydratedFirst), PageRequest.of(0, 1), 1));
+
+        List<UnifiedFlipDto> result = service.topFlips(
+                FlipType.BAZAAR,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                1
+        );
+
+        assertEquals(1, result.size());
+        assertEquals(firstId, result.getFirst().id());
+        assertEquals("ENCHANTED_GOLD", result.getFirst().outputItems().getFirst().itemId());
+        verify(unifiedFlipCurrentReadService).listCurrentFilteredPage(
+                org.mockito.ArgumentMatchers.eq(FlipType.BAZAAR),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.any(Pageable.class)
+        );
+        verifyNoInteractions(flipRepository);
+    }
+
+    @Test
+    void topFlipsCurrentStorageClampsHugeLimitBeforePageAllocation() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        when(unifiedFlipCurrentReadService.listCurrentFilteredPage(
+                org.mockito.ArgumentMatchers.eq(FlipType.BAZAAR),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.any(Pageable.class)
+        )).thenReturn(Page.empty());
+
+        service.topFlips(
+                FlipType.BAZAAR,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                Integer.MAX_VALUE
+        );
+
+        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
+        verify(unifiedFlipCurrentReadService).listCurrentFilteredPage(
+                org.mockito.ArgumentMatchers.eq(FlipType.BAZAAR),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                org.mockito.ArgumentMatchers.isNull(),
+                pageableCaptor.capture()
+        );
+        assertEquals(10_000, pageableCaptor.getValue().getPageSize());
+        assertEquals(0L, pageableCaptor.getValue().getOffset());
+    }
+
+    @Test
+    void topFlipsCurrentStoragePreservesEntriesWithNullIdDuringHydration() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlippingModelProperties flippingModelProperties = new FlippingModelProperties();
+        flippingModelProperties.setRecommendationGatesEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties,
+                flippingModelProperties
+        );
+
+        UUID stableId = UUID.fromString("0f0f0f0f-1111-2222-3333-444444444444");
+        UnifiedFlipDto nullIdScored = sampleGoodnessDto(null, 3.0D, 4_000_000L, 80.0D, 10.0D, false);
+        UnifiedFlipDto stableScored = sampleGoodnessDto(stableId, 2.0D, 2_000_000L, 70.0D, 15.0D, false);
+        when(unifiedFlipCurrentReadService.listCurrentScoringDtos(FlipType.BAZAAR))
+                .thenReturn(List.of(stableScored, nullIdScored));
+
+        UnifiedFlipDto hydratedStable = new UnifiedFlipDto(
+                stableId,
+                FlipType.BAZAAR,
+                List.of(new UnifiedFlipDto.ItemStackDto("COBBLESTONE", 160)),
+                List.of(new UnifiedFlipDto.ItemStackDto("ENCHANTED_COBBLESTONE", 1)),
+                stableScored.requiredCapital(),
+                stableScored.expectedProfit(),
+                stableScored.roi(),
+                stableScored.roiPerHour(),
+                stableScored.durationSeconds(),
+                stableScored.fees(),
+                stableScored.liquidityScore(),
+                stableScored.riskScore(),
+                stableScored.snapshotTimestamp(),
+                stableScored.partial(),
+                stableScored.partialReasons(),
+                List.of(),
+                List.of()
+        );
+        when(unifiedFlipCurrentReadService.listCurrentByStableFlipIds(List.of(stableId)))
+                .thenReturn(List.of(hydratedStable));
+
+        List<UnifiedFlipDto> result = service.topFlips(
+                FlipType.BAZAAR,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                2
+        );
+
+        assertEquals(2, result.size());
+        assertNull(result.get(0).id());
+        assertEquals(stableId, result.get(1).id());
+        verify(unifiedFlipCurrentReadService).listCurrentByStableFlipIds(List.of(stableId));
+        verifyNoInteractions(flipRepository);
+    }
+
+    @Test
+    void topFlipsLegacyUsesPagedSelectionAndKeepsTopN() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        FlipReadService service = new FlipReadService(flipRepository, mapper, contextService);
+        FlipCalculationContext context = FlipCalculationContext.standard(null);
+
+        Flip firstPageLow = mock(Flip.class);
+        Flip firstPageHigh = mock(Flip.class);
+        Flip secondPageMid = mock(Flip.class);
+        UUID lowId = UUID.fromString("8c8c8c8c-8c8c-8c8c-8c8c-8c8c8c8c8c8c");
+        UUID highId = UUID.fromString("8d8d8d8d-8d8d-8d8d-8d8d-8d8d8d8d8d8d");
+        UUID midId = UUID.fromString("8e8e8e8e-8e8e-8e8e-8e8e-8e8e8e8e8e8e");
+        when(firstPageLow.getId()).thenReturn(lowId);
+        when(firstPageHigh.getId()).thenReturn(highId);
+        when(secondPageMid.getId()).thenReturn(midId);
+
+        Pageable firstPage = PageRequest.of(0, 500);
+        Pageable secondPage = PageRequest.of(1, 500);
+        when(flipRepository.findAllIds(firstPage)).thenReturn(new PageImpl<>(List.of(lowId, highId), firstPage, 501));
+        when(flipRepository.findAllByIdInWithDetails(List.of(lowId, highId))).thenReturn(List.of(firstPageLow, firstPageHigh));
+        when(flipRepository.findAllIds(secondPage)).thenReturn(new PageImpl<>(List.of(midId), secondPage, 501));
+        when(flipRepository.findAllByIdInWithDetails(List.of(midId))).thenReturn(List.of(secondPageMid));
+
+        when(contextService.loadCurrentContext()).thenReturn(context);
+        when(mapper.toDto(firstPageLow, context)).thenReturn(sampleGoodnessDto(
+                lowId, 1.0D, 100_000L, 70.0D, 20.0D, false
+        ));
+        when(mapper.toDto(firstPageHigh, context)).thenReturn(sampleGoodnessDto(
+                highId, 1.0D, 900_000L, 70.0D, 20.0D, false
+        ));
+        when(mapper.toDto(secondPageMid, context)).thenReturn(sampleGoodnessDto(
+                midId, 1.0D, 500_000L, 70.0D, 20.0D, false
+        ));
+
+        List<UnifiedFlipDto> result = service.topFlips(
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                2
+        );
+
+        assertEquals(2, result.size());
+        assertEquals(highId, result.get(0).id());
+        assertEquals(midId, result.get(1).id());
+        verify(flipRepository).findAllIds(firstPage);
+        verify(flipRepository).findAllIds(secondPage);
+        verify(flipRepository, never()).findAll(Pageable.unpaged());
+    }
+
+    @Test
     void filterFlipsExcludesMissingInputPriceEntries() {
         FlipRepository flipRepository = mock(FlipRepository.class);
         UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
@@ -524,15 +1232,19 @@ class FlipReadServiceTest {
 
         Flip inflatedMissingInput = mock(Flip.class);
         Flip actionable = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(inflatedMissingInput, actionable)));
+        UUID inflatedId = UUID.fromString("60606060-6060-6060-6060-606060606060");
+        UUID actionableId = UUID.fromString("70707070-7070-7070-7070-707070707070");
+        when(inflatedMissingInput.getId()).thenReturn(inflatedId);
+        when(actionable.getId()).thenReturn(actionableId);
+        stubLegacyPagedAll(flipRepository, List.of(inflatedId, actionableId), List.of(inflatedMissingInput, actionable));
         when(contextService.loadCurrentContext()).thenReturn(context);
 
         when(mapper.toDto(inflatedMissingInput, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("60606060-6060-6060-6060-606060606060"),
+                inflatedId,
                 2000.0D, 200_000_000L, 90.0D, 10.0D, true, List.of("MISSING_INPUT_PRICE_AUCTION:METAL_HEART")
         ));
         when(mapper.toDto(actionable, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("70707070-7070-7070-7070-707070707070"),
+                actionableId,
                 2.0D, 2_000_000L, 70.0D, 25.0D, false, List.of()
         ));
 
@@ -565,15 +1277,19 @@ class FlipReadServiceTest {
 
         Flip shallowInputFlip = mock(Flip.class);
         Flip actionable = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(shallowInputFlip, actionable)));
+        UUID shallowId = UUID.fromString("71717171-7171-7171-7171-717171717171");
+        UUID actionableId = UUID.fromString("72727272-7272-7272-7272-727272727272");
+        when(shallowInputFlip.getId()).thenReturn(shallowId);
+        when(actionable.getId()).thenReturn(actionableId);
+        stubLegacyPagedAll(flipRepository, List.of(shallowId, actionableId), List.of(shallowInputFlip, actionable));
         when(contextService.loadCurrentContext()).thenReturn(context);
 
         when(mapper.toDto(shallowInputFlip, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("71717171-7171-7171-7171-717171717171"),
+                shallowId,
                 25.0D, 25_000_000L, 85.0D, 15.0D, true, List.of("INSUFFICIENT_INPUT_DEPTH:DEPTH_ITEM")
         ));
         when(mapper.toDto(actionable, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("72727272-7272-7272-7272-727272727272"),
+                actionableId,
                 2.0D, 1_500_000L, 70.0D, 25.0D, false, List.of()
         ));
 
@@ -611,15 +1327,19 @@ class FlipReadServiceTest {
 
         Flip lowConfidenceOutlier = mock(Flip.class);
         Flip stable = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(lowConfidenceOutlier, stable)));
+        UUID outlierId = UUID.fromString("73737373-7373-7373-7373-737373737373");
+        UUID stableId = UUID.fromString("74747474-7474-7474-7474-747474747474");
+        when(lowConfidenceOutlier.getId()).thenReturn(outlierId);
+        when(stable.getId()).thenReturn(stableId);
+        stubLegacyPagedAll(flipRepository, List.of(outlierId, stableId), List.of(lowConfidenceOutlier, stable));
         when(contextService.loadCurrentContext()).thenReturn(context);
 
         when(mapper.toDto(lowConfidenceOutlier, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("73737373-7373-7373-7373-737373737373"),
+                outlierId,
                 60.0D, 8_000_000L, 30.0D, 50.0D, true, List.of("INSUFFICIENT_OUTPUT_DEPTH:ITEM")
         ));
         when(mapper.toDto(stable, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("74747474-7474-7474-7474-747474747474"),
+                stableId,
                 0.5D, 1_200_000L, 80.0D, 20.0D, false, List.of()
         ));
 
@@ -646,15 +1366,19 @@ class FlipReadServiceTest {
 
         Flip lowConfidence = mock(Flip.class);
         Flip good = mock(Flip.class);
-        when(flipRepository.findAll(Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(lowConfidence, good)));
+        UUID lowConfidenceId = UUID.fromString("75757575-7575-7575-7575-757575757575");
+        UUID goodId = UUID.fromString("76767676-7676-7676-7676-767676767676");
+        when(lowConfidence.getId()).thenReturn(lowConfidenceId);
+        when(good.getId()).thenReturn(goodId);
+        stubLegacyPagedAll(flipRepository, List.of(lowConfidenceId, goodId), List.of(lowConfidence, good));
         when(contextService.loadCurrentContext()).thenReturn(context);
 
         when(mapper.toDto(lowConfidence, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("75757575-7575-7575-7575-757575757575"),
+                lowConfidenceId,
                 2.0D, 2_000_000L, 70.0D, 25.0D, true, List.of("INSUFFICIENT_OUTPUT_DEPTH:ITEM")
         ));
         when(mapper.toDto(good, context)).thenReturn(sampleGoodnessDto(
-                UUID.fromString("76767676-7676-7676-7676-767676767676"),
+                goodId,
                 2.0D, 2_000_000L, 70.0D, 25.0D, false, List.of()
         ));
 
@@ -675,6 +1399,63 @@ class FlipReadServiceTest {
 
         assertEquals(1, result.getTotalElements());
         assertEquals(UUID.fromString("76767676-7676-7676-7676-767676767676"), result.getContent().getFirst().id());
+    }
+
+    @Test
+    void summaryStatsCurrentStorageUsesScoringDtosWithoutDefinitionHydration() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        UnifiedFlipCurrentReadService unifiedFlipCurrentReadService = mock(UnifiedFlipCurrentReadService.class);
+        OnDemandFlipSnapshotService onDemandFlipSnapshotService = mock(OnDemandFlipSnapshotService.class);
+        FlipStorageProperties flipStorageProperties = new FlipStorageProperties();
+        flipStorageProperties.setReadFromNew(true);
+        flipStorageProperties.setLegacyWriteEnabled(true);
+        FlipReadService service = new FlipReadService(
+                flipRepository,
+                mapper,
+                contextService,
+                unifiedFlipCurrentReadService,
+                onDemandFlipSnapshotService,
+                flipStorageProperties
+        );
+
+        UnifiedFlipDto first = sampleGoodnessDto(
+                UUID.fromString("86868686-8686-8686-8686-868686868686"),
+                1.0D,
+                2_000_000L,
+                70.0D,
+                20.0D,
+                false
+        );
+        UnifiedFlipDto second = sampleGoodnessDto(
+                UUID.fromString("87878787-8787-8787-8787-878787878787"),
+                0.5D,
+                500_000L,
+                60.0D,
+                25.0D,
+                false
+        );
+        when(unifiedFlipCurrentReadService.listCurrentScoringDtos(FlipType.BAZAAR)).thenReturn(List.of(first, second));
+
+        EnumMap<FlipType, Long> counts = new EnumMap<>(FlipType.class);
+        for (FlipType type : FlipType.values()) {
+            counts.put(type, 0L);
+        }
+        counts.put(FlipType.BAZAAR, 2L);
+        when(unifiedFlipCurrentReadService.countsByType()).thenReturn(counts);
+
+        FlipSummaryStatsDto result = service.summaryStats(FlipType.BAZAAR, null);
+
+        assertEquals(2L, result.totalActiveFlips());
+        assertEquals(1_250_000L, result.avgProfit());
+        assertEquals(0.5D, result.avgRoi());
+        assertEquals(2_000_000L, result.bestFlipProfit());
+        assertEquals(1, result.byType().size());
+        assertEquals(2L, result.byType().get(FlipType.BAZAAR.name()));
+        verify(unifiedFlipCurrentReadService).listCurrentScoringDtos(FlipType.BAZAAR);
+        verify(unifiedFlipCurrentReadService, never()).listCurrent(FlipType.BAZAAR);
+        verifyNoInteractions(flipRepository);
     }
 
     @Test
@@ -752,6 +1533,69 @@ class FlipReadServiceTest {
     }
 
     @Test
+    void summaryStatsLegacyUsesGroupedCountQueryForByType() {
+        FlipRepository flipRepository = mock(FlipRepository.class);
+        UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
+        FlipCalculationContextService contextService = mock(FlipCalculationContextService.class);
+        FlipReadService service = new FlipReadService(flipRepository, mapper, contextService);
+
+        long snapshotEpochMillis = Instant.parse("2026-02-20T22:00:00Z").toEpochMilli();
+        FlipCalculationContext context = FlipCalculationContext.standard(null);
+        Flip first = mock(Flip.class);
+        Flip second = mock(Flip.class);
+        UUID firstId = UUID.fromString("81818181-8181-8181-8181-818181818181");
+        UUID secondId = UUID.fromString("82828282-8282-8282-8282-828282828282");
+        when(first.getId()).thenReturn(firstId);
+        when(second.getId()).thenReturn(secondId);
+
+        when(flipRepository.findMaxSnapshotTimestampEpochMillis()).thenReturn(Optional.of(snapshotEpochMillis));
+        PageRequest firstPage = PageRequest.of(0, 500);
+        when(flipRepository.findAllBySnapshotTimestampEpochMillis(snapshotEpochMillis, firstPage))
+                .thenReturn(new PageImpl<>(List.of(first, second), firstPage, 2L));
+        when(flipRepository.countByFlipTypeForSnapshot(snapshotEpochMillis)).thenReturn(List.of(
+                new Object[]{FlipType.AUCTION, 1L},
+                new Object[]{FlipType.BAZAAR, 1L}
+        ));
+        when(contextService.loadContextAsOf(Instant.ofEpochMilli(snapshotEpochMillis))).thenReturn(context);
+        when(mapper.toDto(first, context)).thenReturn(sampleGoodnessDto(
+                firstId,
+                1.0D,
+                1_000_000L,
+                60.0D,
+                20.0D,
+                false
+        ));
+        when(mapper.toDto(second, context)).thenReturn(sampleGoodnessDto(
+                secondId,
+                0.5D,
+                500_000L,
+                55.0D,
+                22.0D,
+                false
+        ));
+
+        FlipSummaryStatsDto result = service.summaryStats(null, null);
+
+        assertEquals(2L, result.totalActiveFlips());
+        assertEquals(750_000L, result.avgProfit());
+        assertEquals(0.5D, result.avgRoi());
+        assertEquals(1_000_000L, result.bestFlipProfit());
+        assertEquals(FlipType.values().length, result.byType().size());
+        assertEquals(1L, result.byType().get(FlipType.AUCTION.name()));
+        assertEquals(1L, result.byType().get(FlipType.BAZAAR.name()));
+        verify(flipRepository, times(1)).countByFlipTypeForSnapshot(snapshotEpochMillis);
+        verify(flipRepository, times(1)).findAllBySnapshotTimestampEpochMillis(snapshotEpochMillis, firstPage);
+        verify(flipRepository, never()).findIdsBySnapshotTimestampEpochMillis(
+                org.mockito.ArgumentMatchers.eq(snapshotEpochMillis),
+                org.mockito.ArgumentMatchers.any(Pageable.class)
+        );
+        verify(flipRepository, never()).findAllByFlipType(
+                org.mockito.ArgumentMatchers.any(FlipType.class),
+                org.mockito.ArgumentMatchers.eq(Pageable.unpaged())
+        );
+    }
+
+    @Test
     void listFlipsCurrentStorageNormalizesIdSortToStableFlipId() {
         FlipRepository flipRepository = mock(FlipRepository.class);
         UnifiedFlipDtoMapper mapper = mock(UnifiedFlipDtoMapper.class);
@@ -809,6 +1653,31 @@ class FlipReadServiceTest {
                 List.of(),
                 List.of()
         );
+    }
+
+    private void stubLegacyPagedAll(FlipRepository flipRepository, List<UUID> ids, List<Flip> flips) {
+        PageRequest firstPage = PageRequest.of(0, 500);
+        when(flipRepository.findAllIds(firstPage)).thenReturn(new PageImpl<>(ids, firstPage, ids.size()));
+        when(flipRepository.findAllByIdInWithDetails(ids)).thenReturn(flips);
+    }
+
+    private void stubLegacyPagedByType(FlipRepository flipRepository,
+                                       FlipType flipType,
+                                       List<UUID> ids,
+                                       List<Flip> flips) {
+        PageRequest firstPage = PageRequest.of(0, 500);
+        when(flipRepository.findIdsByFlipType(flipType, firstPage)).thenReturn(new PageImpl<>(ids, firstPage, ids.size()));
+        when(flipRepository.findAllByIdInWithDetails(ids)).thenReturn(flips);
+    }
+
+    private void stubLegacyPagedBySnapshot(FlipRepository flipRepository,
+                                           long snapshotEpochMillis,
+                                           List<UUID> ids,
+                                           List<Flip> flips) {
+        PageRequest firstPage = PageRequest.of(0, 500);
+        when(flipRepository.findIdsBySnapshotTimestampEpochMillis(snapshotEpochMillis, firstPage))
+                .thenReturn(new PageImpl<>(ids, firstPage, ids.size()));
+        when(flipRepository.findAllByIdInWithDetails(ids)).thenReturn(flips);
     }
 
     private UnifiedFlipDto sampleScoredDto(UUID id, Double liquidityScore, Double riskScore, Long expectedProfit) {
